fix layout on mobile devices, revised the points chart

--- a/perks/style.css
+++ b/perks/style.css
@@ -11,12 +11,38 @@ body {
 
 /* Fix for phone screens */
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
+    #rootContainer {
+        transform: scale(.8);
+        transform-origin: 50% 0;
+    }
+}
+@media only screen and (max-width: 700px) {
     #rootContainer {
         transform: scale(.7);
         transform-origin: 50% 0;
     }
 }
+@media only screen and (max-width: 600px) {
+    #rootContainer {
+        transform: scale(.6);
+        transform-origin: 50% 0;
+    }
+}
+@media only screen and (max-width: 500px) {
+    #rootContainer {
+        transform: scale(.5);
+        transform-origin: 50% 0;
+    }
+}
+@media only screen and (max-width: 400px) {
+    #rootContainer {
+        transform: scale(.4);
+        transform-origin: 50% 0;
+    }
+}
+
+
 
 
 #rootContainer {
@@ -281,4 +307,60 @@ body {
     background-position: 50% 0;
     background-size: contain;
     background-repeat: no-repeat;
+}
+
+#playerPointsChart {
+    width: 400px;
+    margin: auto;
+}
+.pointsChartRow {
+    display: flex;
+    position: relative;
+    transform: translate(0, 30px);
+    box-shadow: 2px 2px 5px black;
+    border: 1px solid black;
+}
+.pointsChartRow > div {
+    flex: 1;
+    padding: 1rem;
+    /*background-color: white;*/
+
+    font-size: 1.5rem;
+    font-family: 'Luckiest Guy';
+}
+.pointsChartRow > .playerScore {
+    background-color: white;
+}
+
+.pointsChartRow .playerName {
+    background-image: linear-gradient(black, #444444,black);
+    text-shadow: 1px 1px 8px black;
+    color: white;
+    border-right: 1px solid black;
+}
+
+/* Styling unique to gold/silver/bronze */
+.pointsChartRow:first-child {
+    transform-origin: 50% 0;
+    transform: scale(1.5);
+    z-index:2;
+}
+.pointsChartRow:first-child .playerName {
+    background-image: linear-gradient(#B78628, #FCC201, #B78628 )
+}
+.pointsChartRow:nth-child(2) {
+    transform-origin: 50% 0;
+    transform: scale(1.2) translate(0, 22px);
+    z-index: 1;
+}
+.pointsChartRow:nth-child(2) .playerName {
+    background-image: linear-gradient(#AEB2B8, #D7D7D8, #AEB2B8 )   
+}
+
+.pointsChartRow:nth-child(3) {
+    transform-origin: 50% 0;
+    transform: scale(1) translate(0, 34px);
+}
+.pointsChartRow:nth-child(3) .playerName {
+    background-image: linear-gradient(#6E3A06, #CD7F31, #6E3A06 )   
 }
